--- a/client/src/i18n/zh_CN.json
+++ b/client/src/i18n/zh_CN.json
@@ -7,6 +7,12 @@
         "nodes": "节点",
         "search": "搜索容器、镜像"
     },
+    "container": {
+        "detail": {
+            "exited": "已停止",
+            "running": "运行中"
+        }
+    },
     "containers": {
         "detail": "明细",
         "exited": "已停止",
