--- a/client/src/i18n/zh_CN.json
+++ b/client/src/i18n/zh_CN.json
@@ -18,6 +18,7 @@
         "exited": "已停止",
         "running": "运行中",
         "changing": "变动中",
+        "created": "已创建",
         "Up Less than a second": "刚刚",
         "Up (.*) seconds": "超过 {{1}} 秒",
         "Up About a minute": "大概一分钟",
@@ -29,7 +30,8 @@
         "Exited \\(.*\\) About a minute ago": "大概一分钟以前",
         "Exited \\(.*\\) (.*) minutes ago": "{{1}}分钟以前",
         "Exited \\(.*\\) (.*) hours ago": "{{1}}小时以前",
-        "Exited \\(.*\\) (.*) weeks ago": "{{1}} 周以前"
+        "Exited \\(.*\\) (.*) weeks ago": "{{1}} 周以前",
+        "Created": "从未运行"
     },
     "images": {
         "refresh": "刷新",
