--- a/_docker/client/i18n/zh_CN.json
+++ b/_docker/client/i18n/zh_CN.json
@@ -7,11 +7,20 @@
         "nodes": "节点",
         "search": "搜索容器、镜像"
     },
+    "container": {
+        "detail": {
+            "exited": "已停止",
+            "running": "运行中",
+            "created": "已创建",
+            "changing": "变动中"
+        }
+    },
     "containers": {
         "detail": "明细",
         "exited": "已停止",
         "running": "运行中",
         "changing": "变动中",
+        "created": "已创建",
         "Up Less than a second": "刚刚",
         "Up (.*) seconds": "超过 {{1}} 秒",
         "Up About a minute": "大概一分钟",
@@ -23,7 +32,9 @@
         "Exited \\(.*\\) About a minute ago": "大概一分钟以前",
         "Exited \\(.*\\) (.*) minutes ago": "{{1}}分钟以前",
         "Exited \\(.*\\) (.*) hours ago": "{{1}}小时以前",
-        "Exited \\(.*\\) (.*) weeks ago": "{{1}} 周以前"
+        "Exited \\(.*\\) (.*) weeks ago": "{{1}} 周以前",
+        "Exited \\(.*\\) About an hour ago": "一个小时以前",
+        "Created": "从未运行"
     },
     "images": {
         "refresh": "刷新",
